--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
   "name": "tk-proxy",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "bun@1.3.3",
   "type": "module",
   "bin": {
-    "tk-proxy": "./src/cli.mjs"
+    "tk-proxy": "./dist/src/cli.js"
   },
   "scripts": {
-    "test": "node --test",
-    "start": "node ./src/cli.mjs"
+    "build": "bun run ./scripts/build-exe.ts",
+    "build:ts": "tsc -p tsconfig.json",
+    "prepare": "bun run build:ts",
+    "test": "bun run build:ts && node --test dist/test/*.test.js",
+    "start": "node ./dist/src/cli.js"
+  },
+  "devDependencies": {
+    "@types/node": "^24.6.0",
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=18"
